--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.ubirch</groupId>
     <artifactId>ubirch-protocol-java</artifactId>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>2.1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -73,9 +73,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <ubirch-crypto.version>2.0.6</ubirch-crypto.version>
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.13.3</jackson.version>
         <msgpack-core.version>0.8.16</msgpack-core.version>
         <commons-codec.version>1.11</commons-codec.version>
+        <checkstyle.version>10.3</checkstyle.version>
+        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
 
         <!-- Logging -->
         <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -169,7 +171,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>verify-style</id>
@@ -198,7 +200,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>8.18</version>
+                        <version>${checkstyle.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -253,6 +255,12 @@
                         <configuration>
                             <keyname>7a672196888951a7cccdc200810233050cd1c9f0</keyname>
                         </configuration>
+                    </plugin>
+                    <!-- plugin to check for vulnerable dependencies; invoke by mvn org.owasp:dependency-check-maven:check -->
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>7.1.1</version>
                     </plugin>
                 </plugins>
             </build>
